# hashmap2

./: .travis.yml  Cargo.toml  README.md
src/: lib.rs  recover.rs  table.rs
